[gd_scene load_steps=4 format=3 uid="uid://b42owupk1jg6p"]

[ext_resource type="Script" path="res://scripts/fail_finish_scene.gd" id="1_eoxvn"]
[ext_resource type="PackedScene" uid="uid://can6od2otra6s" path="res://scenes/canvas_ui/button.tscn" id="2_4vpun"]
[ext_resource type="PackedScene" uid="uid://b8tsw525wce4u" path="res://scenes/canvas_ui/btn_click.tscn" id="3_1tgal"]

[node name="FailLevelScene" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eoxvn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Level Failed!"

[node name="Retry" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_4vpun")]
layout_mode = 2
text = "Retry"

[node name="LevelSelect" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_4vpun")]
layout_mode = 2
text = "Level Select"

[node name="MainMenu" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_4vpun")]
layout_mode = 2
text = "Main Menu"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="btn_click" parent="." instance=ExtResource("3_1tgal")]

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
